--- a/src/app/editcustomer/editcustomer.component.html
+++ b/src/app/editcustomer/editcustomer.component.html
@@ -1,30 +1,31 @@
+
 <ion-header>
     <ion-toolbar>
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title>Add Customer</ion-title>
+      <ion-title>Update Customer</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content>
     <ion-item>
       <ion-label position="floating">Name:</ion-label>
-      <ion-input [(ngModel)]="customer.name"></ion-input>
+      <ion-input name="name" [(ngModel)]="customer.name"></ion-input>
     </ion-item> 
     <ion-item>
       <ion-label position="floating">Email:</ion-label>
-      <ion-input [(ngModel)]="customer.email"></ion-input>
+      <ion-input name="email" [(ngModel)]="customer.email"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Phone:</ion-label>
-      <ion-input [(ngModel)]="customer.phone"></ion-input>
+      <ion-input name="phone" [(ngModel)]="customer.phone"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Address:</ion-label>
-      <ion-input [(ngModel)]="customer.address"></ion-input>
+      <ion-input name="address" [(ngModel)]="customer.address"></ion-input>
     </ion-item>
-    <ion-button name="add" (click)="addCustomer(customer)">Add Customer</ion-button>
+    <ion-button (click)="updateCustomer(customer)">Update</ion-button>
 
-   
+    
    </ion-content>
   
