--- a/src/app/listcustomer/listcustomer.component.html
+++ b/src/app/listcustomer/listcustomer.component.html
@@ -7,12 +7,19 @@
     </ion-toolbar>
   </ion-header>
   <ion-content padding>
-  <h2>customerlist</h2>
-          
-    <ion-card *ngFor='let customer of list' >
-            <ion-card-header> {{customer.id}}</ion-card-header> 
-            {{customer.name}}| {{customer.email}}| {{customer.phone}}| 
+   <ion-card *ngFor='let customer of list' >
+      <ion-icon name="person"></ion-icon>
+      <ion-button name="edit" (click)="onEdit(customer)" ><ion-icon name="create"></ion-icon></ion-button>
+      {{customer.name}}
+      <ion-button name="deletehere" (click)="deleteCustomer(customer)"><ion-icon name="trash"></ion-icon> </ion-button>    
+<hr>
+      <ion-icon name="mail"></ion-icon> {{customer.email}}<br>
+      <hr>
+      <ion-icon name="phone-portrait"></ion-icon> {{customer.phone}}<br>
+      <hr>
+      <ion-icon name="pin"></ion-icon>
              {{customer.address}}
+             
     </ion-card>
         
         
