--- a/src/app/listcustomer/listcustomer.component.scss
+++ b/src/app/listcustomer/listcustomer.component.scss
@@ -2,9 +2,9 @@ ion-card{
     width:100%;
     height: 40%;
     font-size: 20px;
-    padding:10px;
-    margin:10px;
-    margin-right: 5px;
+    padding:20px;
+    margin-top:40px;
+    margin-right: -15px;
 }
 ion-card ion-button{
     width:15%;
@@ -13,4 +13,5 @@ ion-card ion-button{
 ion-content ion-button{
     width:15%;
     height: 8%;
+    margin:auto;
 }
